

  ChangeLog.txt for libSUFR
  
     
   45: 27/04/2011:
     - Added file src/command_line.f90: Procedures to handle command-line options and arguments:
       - get_command_argument_i(), get_command_argument_l(), get_command_argument_r(), 
         get_command_argument_d(): read a command-line variable with type int, long, real, double
     - In statistics, added: faculty_i(), faculty(), binom_coeff() and binom_prob()
     - CMake: added option to cancel compilation on warning (for gfortran, g95)
       
   44: 25/04/2011:  ** SF release 0.1.7 **
     - 4702 lines of code
     
   43: 25/04/2011:
     - Added file earth.f90 with distance() and distance_r()
     - Added sort_string_array() in sorting to sort an array of strings
     - Added rrev() and rrev2() to angles; single-precision versions of rev() and rev2()
     - Added constant currentmillisecond
     - Updated uppercaseinitial()
     
   42: 18/04/2011:
     - system: Added routines warn() and error() to print standardised warnings and errors
     
   41: 17/04/2011:
     - system: added quit_program_warning() and quit_program_error() to generate 
       standardized warnings and errors, and allow non-zero exit codes
     - constants: added semi-major axes of planets
   
   40: 06/04/2011:  ** SF release 0.1.6 **
     - Added routine wass() to angle2string.f90 - it returns an angle in " in HTML
     - 4419 lines of code
     
   39: 06/04/2011:
     - Bugfix:  fixed factor of pi in definitions of r2as and as2r
     - longer strings for homedir, workdir, program_path, program_args
     
   38: 03/04/2011:
     - fixed bug in use of dow_ut() for currentdate string
     - fixed implicit conversions - code compiles with gfortran-4.6
   
   37: 25/03/2011:  *** SF release 0.1.5 ***
     - 4391 lines of code
     - fixed CREATE_SHAREDLIB, CREATE_STATICLIB issue (WANT_STATIC already existed)
     
   36: 25/03/2011:
     - Update CMake: 
       - make shared/static libraries optional
              